# Django-learning

./: Django.code-profile  db.sqlite3  pyproject.toml
core/: settings.py  urls.py
django-todo-list/: 2023（下）全勞聯 Django 練習測驗 - HackMD.html  db.sqlite3  pyproject.toml
django-todo-list/2023（下）全勞聯 Django 練習測驗 - HackMD_files/: anchor.html  client  enterprise.js.下載  gtm.js.下載  i18n.js.下載  js  js(1)  pretty.4f321f663d5f8191c565.css  recaptcha__zh_tw.js.下載
django-todo-list/core/: settings.py  urls.py
django-todo-list/templates/: base.html
django-todo-list/todo/: admin.py  forms.py  models.py  urls.py  views.py
django-todo-list/todo/migrations/: 0001_initial.py  0002_project_status.py  0003_remove_task_is_finish_task_status_and_more.py  0004_alter_project_options.py
django-todo-list/todo/templates/: todo_base.html
django-todo-list/todo/templates/todo/: _form_post.html  task_create.html  task_delete.html  task_list.html  task_retrieve.html  task_update.html
django-todo-list/users/: urls.py
django-todo-list/users/templates/: user_base.html
django-todo-list/users/templates/users/: _form_post.html  login.html  logout.html  password_change.html  password_change_done.html  password_reset_done.html  password_reset_form.html
first/: admin.py  forms.py  models.py  views.py
first/migrations/: 0001_initial.py  0002_post_is_public.py  0003_post_content.py  0004_post_author.py  0005_post_is_draft.py  0006_post_dt.py  0007_comment.py  0008_tag_post_tags.py  0009_alter_post_tags.py  0010_alter_comment_post_alter_post_tags.py
templates/: base.html
(+12 files in other folders)
