[tool.poetry]
name = "dj-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.7"
django-extensions = "^3.2.3"


[tool.poetry.group.dev.dependencies]
djlint = "^1.34.0"
black = "^23.11.0"
isort = "^5.13.0"
ipython = "^8.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.djlint]
profile="django"
preserve_blank_lines=true

